ボタンの表記を日本語に統一

--- a/views/new.erb
+++ b/views/new.erb
@@ -10,7 +10,7 @@
       <textarea name="content" required></textarea>
     </div>
     <div class="form-action">
-      <input type="submit" value="追加">
+      <input type="submit" value="保存">
     </div>
 </form>
 
